fix: fix h3 align

--- a/frontend/src/assets/styles/Presentation/PresCards.css
+++ b/frontend/src/assets/styles/Presentation/PresCards.css
@@ -65,6 +65,10 @@ h3 {
   gap: 16px;
 }
 
+.small-list h3{
+  text-align: left;
+}
+
 /*input*/
 .input {
   width: 100%;
